/test endpoint
This commit add basic frontend to /test enpoint as well as
refactorized architecture for it.
Previously /test was called /evaluate.
